Fix grid gap spacing for featured grids

--- a/web/themes/custom/union_marketing/scss/global/_union-variables.scss
+++ b/web/themes/custom/union_marketing/scss/global/_union-variables.scss
@@ -27,6 +27,7 @@
 }
 
 .collection-listing.cu-grid,
+.cu-grid--featured,
 .cu-list--grid,
 .cu-list--grid-compact {
   --cu-grid-row-gap: var(--cu-vr2);
